<?xml version="1.0"?>
<package format='3'>
  <name>blob_depth_pcl</name>
  <version>0.0.0</version>
  <description>The image_depth package</description>

  <maintainer email="ccplaore@todo.todo">ccplaore</maintainer>

  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>depth_interface</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

  <!-- <build_depend>cv_bridge</build_depend> -->
  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <build_depend>image_transport</build_depend> -->
  <!-- <build_depend>pcl_conversions</build_depend> -->
  <!-- <build_depend>pcl_ros</build_depend> -->
  <!-- <build_depend>roscpp</build_depend> -->
  <!-- <build_depend>opencv2</build_depend> -->
  <!-- <build_depend>sensor_msgs</build_depend> -->
  <!-- <build_depend>message_generation</build_depend> -->

  <!-- <run_depend>cv_bridge</run_depend> -->
  <!-- <run_depend>image_transport</run_depend> -->
  <!-- <run_depend>pcl_conversions</run_depend> -->
  <!-- <run_depend>pcl_ros</run_depend> -->
  <!-- <run_depend>roscpp</run_depend> -->
  <!-- <run_depend>sensor_msgs</run_depend> -->
  <!-- <run_depend>opencv2</run_depend> -->
  <!-- <run_depend>std_msgs</run_depend> -->
  <!-- <run_depend>message_runtime</run_depend> -->


