<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/chema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>landmark_msgs</name>
    <version>0.0.0</version>
    <description>The landmark_msgs package for ROS2</description>
    <maintainer email="rsait.robotics@gmail.com">rsait</maintainer>
    <license>BSD</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>std_msgs</depend>
    <depend>rclcpp</depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>