<?xml version="1.0"?>
<package format="3">
  <name>landmarks</name>
  <version>0.0.1</version>
  <description>Landmark detector</description>
  <maintainer email="rsait.robotics@gmail.com">rsait</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rigid2d</depend>
  <depend>landmark_msgs</depend>
      <!-- <depend>tsim</depend> -->
  <depend>visualization_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
